fix: replace center with middle for vertical-align

--- a/src/components/lmd-input/lmd-input.css
+++ b/src/components/lmd-input/lmd-input.css
@@ -8,7 +8,7 @@
 
 button.edit-button {
   display: inline-block;
-  vertical-align: center;
+  vertical-align: middle;
   background: none;
   border: none;
   padding: 0px;
